- 添加初始设计检查流程中报告描述 - 添加官网上一个案例

--- a/UG1292_UltraFast_设计方法时序收敛快捷参考指南/UG1292.md
+++ b/UG1292_UltraFast_设计方法时序收敛快捷参考指南/UG1292.md
@@ -1,14 +1,15 @@
 # 0前言
 
-Xilinx关于时序收敛的文档常用有两个：
+Xilinx关于时序收敛的文档常用有三个：
 
 | UG949      | UltraFast 设计方法指南（适用于 Vivado Design Suite） |
 | ---------- | ---------------------------------------------------- |
 | **UG1292** | **UltraFast 设计方法时序收敛快捷参考指南**           |
+| **UG906**  | **Vivado Design Suite 用户指南 设计分析与收敛技巧**  |
 
-**UG1292 **可以作为时序收敛的快速参考手册，更系统直观的介绍时序收敛的方法，而**UG949**为更具体的手册用于查找具体信息。
+**UG1292** **可以作为时序收敛的快速参考手册，更系统直观的介绍时序收敛的方法，而**UG949**为更具体的手册用于查找具体信息。
 
-目前两个文档在Xilinx官网均有中文版：https://china.xilinx.com/search/site-keyword-search.html#q=ug949
+目前三个文档在Xilinx官网均有中文版：https://china.xilinx.com/search/site-keyword-search.html#q=ug949
 
 **UG1292**和**UG949**的基本理念：尽可能地把所有问题放在设计初期解决。**UG1292**手册内容只有10页，几乎涵盖所有时序违例的解决方法，提供了以下简化的分步骤快速收敛时序流程：
 
@@ -66,9 +67,54 @@ Xilinx关于时序收敛的文档常用有两个：
 
 ![image-20210309164614916](UG1292.assets/image-20210309164614916.png)
 
-实行如下tcl命令即可得到FAILFAST报告
+执行如下tcl命令即可得到FAILFAST报告
 
 ```tcl
-xilinx::designutils::report_failfast
+xilinx::designutils::report_failfast -detailed_report impl -file failfast.rpt
 ```
 
+具体的报告分为三个部分：
+
+1. **设计特性**：默认利用率指南基于 SSI 技术器件，对非 SSI 技术器件可以放松。有一个或多个 REVIEW 检查的设计可行但难以实现。
+
+   > 小规模集成电路（SSI）、中规模集成电路（MSI）、大规模集成电路（LSI）、超大规模集成电路（VLSI）
+
+2. **时钟检查**：这些检查非常重要，必须解决。
+
+3. **LUT** **和网络预算**：使用保守方法更可靠地预测在器件利用率高的情况下布局后哪些逻辑路径最可能无法满足时序要求。
+
+<img src="UG1292.assets/image-20210309170336738.png" alt="image-20210309170336738" style="zoom: 50%;" />
+
+FAILFAST报告中对于资源利用给出了参考值，对于LUT，利用率应控制在70%以内；触发器（FD）应控制在50%以内；BlockRAM和DSP48可以达到80%。
+
+**在这个报告中尤其要关注Status为Review的条目**，这是会给时序收敛带来负面影响的，需要优化。对于设计中存在Pblock情形，report_failfast提供了-pblock选项，对于SSI器件，report_failfast提供了-slr和-by_slr（需要在place_design阶段生成的dcp下使用）选项。这样，可针对某个pblock或某个SLR进行分析。
+
+```tcl
+report_utilization –pblocks <pblockName>
+report_failfast –pblock <pblockName>
+report_failfast [–slr SLRn | -by_slr]
+```
+
+## 时序报告
+
+综合实现的步骤：
+
+`synth_design -> opt_design -> place-design -> phys_opt_design -> route_design`
+
+synthesis之后给出的时序报告都是估计值，因此**synthesis的时序报告可以不考虑Hold Time，只考虑Setup Time**；即便此时Hold Time违例，我们也不需要去理会。
+
+在Place Design之后再去看Hold Time，如果此时Hold Time的违例比较小（比如-0.05 ns），还是不需要理会的，因为工具在布线时会修复Hold，但如果Slack太大了，无法修复了，就会牺牲setup来弥补hold。
+
+我们可以让工具在每一步执行后都会有时序报告，只需要把`Tools->Settings->implementation->Report Settings`的策略选择为`Timing Closure Reports`
+
+<img src="UG1292.assets/image-20210310142718504.png" alt="image-20210310142718504" style="zoom: 67%;" />
+
+通过执行report_timing_summary可以生成时序报告，除了查看时序违例路径之外，该报告还可显示时序约束是否存在潜在问题。如下图所示，Check Timing下包含12个条目，这个阶段需要格外关注是否有未约束的时序路径，是否有Timing loop，同时还要关注时钟约束是否合理。
+
+<img src="UG1292.assets/image-20210310143802544.png" alt="image-20210310143802544" style="zoom:80%;" />
+
+## UFDM报告
+
+report_methodology可以生成UFDM报告。该命令不仅可以检查RTL代码存在的问题，例如Block RAM没有使用内部Embedded Registers，DSP48用做乘法器时没有使能MREG等，还可以检查时序约束存在的问题。如图所示，要尤其关注其中的Bad Practice。
+
+<img src="UG1292.assets/image-20210310144333498.png" alt="image-20210310144333498" style="zoom:80%;" />
