- 添加 7降低信号网络延迟流程 2 - 修改章节5和6部分内容

--- a/UG1292_UltraFast_设计方法时序收敛快捷参考指南/5减少逻辑延迟流程.md
+++ b/UG1292_UltraFast_设计方法时序收敛快捷参考指南/5减少逻辑延迟流程.md
@@ -20,7 +20,13 @@ report_design_analysis -logic_level_distribution -logic_level_dist_paths 1000 -n
 
 <img src="5减少逻辑延迟流程.assets/image-20210316152505721.png" alt="image-20210316152505721" style="zoom:80%;" />
 
-## **优化常规结构路径**
+**合理的逻辑层次数量：时钟周期（ns）/0.5**
+
+> 指南：每个逻辑层次 500 ps（1 个 LUT + 1 个网络） 
+
+如上面设计采用的时钟周期为8 ns，那么最大逻辑层次应 < 16
+
+## 优化常规结构路径
 
 ### 输入较少的级联 LUT (LUT1-LUT4)
 
@@ -47,6 +53,19 @@ report_design_analysis -logic_level_distribution -logic_level_dist_paths 1000 -n
 ### 使用Retiming
 
 此外，还可以在综合时对全局使用retiming（选中-retiming选项）或者采用模块化综合方式，对某个模块使用retiming。
+
+### 对不同实例采用不同策略
+
+<img src="5减少逻辑延迟流程.assets/image-20210318163321759.png" alt="image-20210318163321759" style="zoom:50%;" />
+
+```tcl
+set_property BLOCK_SYNTH.RETIMING 1 [get_cells U1]
+set_property BLOCK_SYNTH.STRATEGY {ALTERNATE_ROUTABILITY} [get_cells U2]
+set_property BLOCK_SYNTH.STRATEGY {AREA_OPTIMIZED} [get_cells U3]
+set_property BLOCK_SYNTH.LUT_COMBINING [get_cells U3/inst1]
+```
+
+<img src="5减少逻辑延迟流程.assets/image-20210318163521217.png" alt="image-20210318163521217" style="zoom:67%;" />
 
 ## **优化专用块和宏原语最优化路径**
 
