--- a/UG1292_UltraFast_设计方法时序收敛快捷参考指南/6降低信号网络延迟流程 1.md
+++ b/UG1292_UltraFast_设计方法时序收敛快捷参考指南/6降低信号网络延迟流程 1.md
@@ -100,18 +100,85 @@ report_design_analysis –congestion -name xx
 report_high_fanout_nets -name high_fanout_nets_1
 ```
 
-<img src="6降低信号网络延迟流程 1.assets/image-20210317154422609.png" alt="image-20210317154422609" style="zoom: 50%;" />
+<img src="6降低信号网络延迟流程 1.assets/image-20210317171034453.png" alt="image-20210317171034453" style="zoom: 67%;" />
 
-- 在RTL层面，基于设计层次复制寄存器降低扇出，或者在opt_design阶段通过-hier_fanout_limit选项降低扇出。
+![image-20210318133052912](6降低信号网络延迟流程 1.assets/image-20210318133052912.png)
+
+#### 综合：受限复制
+
+在RTL层面，基于设计层次复制寄存器降低扇出
+
+- 使用 KEEP 属性在 RTL 中复制寄存器
+- 使用 pblock 约束在每个 SLR 中进行复制
+
+注意事项：**避免将 MAX_FANOUT 用于全局控制信号**，如果需要，只在小模块中的个别信号使用 MAX_FANOUT
+
+#### Opt Design：粗粒度复制
+
+​	**基于大设计层级**
+
+- 在高扇出网络上插入、合并与分割 BUFG（默认执行） 
+
+- 在opt_design阶段通过添加选项降低扇出。
 
   ```tcl
-  opt_design –merge_equivalent_drivers –hier_fanout_limit 512
+  opt_design 	-merge_equivalent_drivers	#合并所有 LUT 和 Flop 等效驱动器
+  opt_design	-hier_fanout_limit 512		#控制基于模块的复制
+  opt_design	-control_set_merge			#合并 opt_design 中的低扇出控制信号
   ```
+
+  或者在settings中设置
+
+  <img src="6降低信号网络延迟流程 1.assets/image-20210317165707717.png" alt="image-20210317165707717" style="zoom:67%;" />
+
+  <img src="6降低信号网络延迟流程 1.assets/image-20210318165713934.png" alt="image-20210318165713934" style="zoom: 50%;" />
+
+  效果如下：原先扇出最大的路径扇出减少，新增连接到BUFG的时钟路径
+
+  <img src="6降低信号网络延迟流程 1.assets/image-20210318112443881.png" alt="image-20210318112443881" style="zoom: 50%;" />
+
+  <img src="6降低信号网络延迟流程 1.assets/image-20210318140833950.png" alt="image-20210318140833950" style="zoom:50%;" />
+
+#### Place Design：中粒度复制
+
+​		**基于早期布局和时序信息**
+
+布局器中的物理综合 (PSIP)
+
+- 在全局布局过程中根据资源可用性自动插入 BUFG
+
+- 布局过程中使用‘-fanout_opt’复制高扇出网络
+- 复制连接到 DSP/BRAM 的低/中扇出网络
+
+优点：
+
+- 不需要在 RTL/综合层面进行猜测
+- 理想的控制集使用
+- 布局已知，而且复制基于驱动器和负载布局
+- 在布局器中较早解决时序关键的 HFN
+- 减少布局后的物理优化
+
+<img src="6降低信号网络延迟流程 1.assets/image-20210318170230578.png" alt="image-20210318170230578" style="zoom:50%;" />
+
+#### Phys Opt Design：精细粒度复制
+
+​		**基于精确时序信息**
 
 - 在phys_opt_design（布局之后）阶段通过-force_replication_on_nets对关键的高扇出网线通过复制寄存器降低扇出。
 
   ```tcl
   phys_opt_design -force_replication_on_nets <net>
+  # 或者
+  Phys_opt_design -directive AggresiveExplore <net>
+  ```
+
+  **适用于IP内的高扇出路径（无法修改源码时）**
+
+- 如果不是关键时序，而且高扇出网络直接馈送 FF ，将扇出 >25 k 的网络推广到全局时钟
+
+  ```tcl
+  set_property CLOCK_BUFFER_TYPE BUFG [get_nets netName]
   ```
 
   
+
