- 添加 8改善时钟偏差流程

--- a/UG1292_UltraFast_设计方法时序收敛快捷参考指南/7降低信号网络延迟流程 2.md
+++ b/UG1292_UltraFast_设计方法时序收敛快捷参考指南/7降低信号网络延迟流程 2.md
@@ -83,7 +83,7 @@ report_control_sets -verbose
 
 Vivado提供了多种实现策略。因此，尝试不同实现策略是达到时序收敛的一个手段。
 
-- 尝试多种place_design和phys_opt_design，这可通过设置不同的-directive实现；
-- 尝试使用过约束（过约最大0.5ns），这可通过设置Clock Uncertainty实现。需要用到set_clock_uncertainty；
-- 对关键时钟域下的路径设置更高的优先级，使工具对其优先布局布线，这可通过命令group_path实现；
+- 尝试多个 place_design 指令（最多 10 个）和多次 phys_opt_design 迭代（Aggressive*、Alternate* 指令），这可通过设置不同的-directive实现；
+- 尝试在 place_design/phys_opt_design 过程中过度约束最关键时钟（过约最大0.5ns），这可通过设置Clock Uncertainty实现。需要用到`set_clock_uncertainty`；
+- 对关键时钟域下的路径设置更高的优先级，使工具对其优先布局布线，这可通过命令g`roup_path –weight`实现；
 - 尝试使用增量布局布线，继承之前好的布局布线结果，并缩短编译时间。
