- 添加9改善时钟不确定性流程 - 修改部分描述

--- a/UG1292_UltraFast_设计方法时序收敛快捷参考指南/2时序基线流程.md
+++ b/UG1292_UltraFast_设计方法时序收敛快捷参考指南/2时序基线流程.md
@@ -26,7 +26,7 @@
 
 (4) 不平衡时钟间的高时钟偏差或高时钟不确定性。
 
-在 Explore 模g式或 Aggressive Explore 模式下运行 `phys_opt_design`（-directive设置为Explore或Aggressive Explore），试图提升 post_place_design QoR。如果不成功，先重点提升布局 QoR。
+在 Explore 模式或 Aggressive Explore 模式下运行 `phys_opt_design`（-directive设置为Explore或Aggressive Explore），试图提升 post_place_design QoR。如果不成功，先重点提升布局 QoR。
 
 ### **预布线** **(WHS < -0.5 ns)**
 
