--- a/UG1292_UltraFast_设计方法时序收敛快捷参考指南/5减少逻辑延迟流程.md
+++ b/UG1292_UltraFast_设计方法时序收敛快捷参考指南/5减少逻辑延迟流程.md
@@ -26,7 +26,7 @@ report_design_analysis -logic_level_distribution -logic_level_dist_paths 1000 -n
 
 如上面设计采用的时钟周期为8 ns，那么最大逻辑层次应 < 16
 
-## 优化常规结构路径
+## 1优化常规结构路径
 
 ### 输入较少的级联 LUT (LUT1-LUT4)
 
@@ -54,6 +54,30 @@ report_design_analysis -logic_level_distribution -logic_level_dist_paths 1000 -n
 
 此外，还可以在综合时对全局使用retiming（选中-retiming选项）或者采用模块化综合方式，对某个模块使用retiming。
 
+使用 Vivado 综合中提供的 retiming_forward 和 retiming_backward 属性来控制特定寄存器或路径上的最优化。使用这些属性会对一组特定路径（而不是顶层模块或子模块）应用重定时最优化，从而减少面积开销。您可在RTL 或 XDC 文件中应用这些属性。
+
+> 参阅《Vivado Design Suite用户指南：综合》(UG901)
+
+#### 如何使用
+
+下图显示了 inst1/inst2 层级内 58 条具有 5 个逻辑层次并受 600 MHz 时钟约束的路径以及 32 条仅含 1 个逻辑层次的路径。
+
+```tcl
+report_design_analysis -timing -logic_level_distribution -of_timing_paths [get_timing_paths  -max_paths 100 -group clkout0]
+```
+
+<img src="5减少逻辑延迟流程.assets/image-20210322155516028.png" alt="image-20210322155516028" style="zoom:80%;" />
+
+![image-20210322161217030](5减少逻辑延迟流程.assets/image-20210322161217030.png)
+
+Vivado 综合可通过将低逻辑层次路径内的寄存器迁移到高逻辑层次路径中来对逻辑层次进行再平衡。在此示例中，您可向综合 XDC 文件添加以下约束，以便在 inst1/inst2 层级上执行重定时：
+
+```tcl
+set_property BLOCK_SYNTH.RETIMING 1 [get_cells inst1/inst2]
+```
+
+<img src="5减少逻辑延迟流程.assets/image-20210322155735508.png" alt="image-20210322155735508" style="zoom:80%;" />
+
 ### 对不同实例采用不同策略
 
 <img src="5减少逻辑延迟流程.assets/image-20210318163321759.png" alt="image-20210318163321759" style="zoom:50%;" />
@@ -67,7 +91,7 @@ set_property BLOCK_SYNTH.LUT_COMBINING [get_cells U3/inst1]
 
 <img src="5减少逻辑延迟流程.assets/image-20210318163521217.png" alt="image-20210318163521217" style="zoom:67%;" />
 
-## **优化专用块和宏原语最优化路径**
+## **2优化专用块和宏原语最优化路径**
 
 从专用块和宏原语（例如 DSP、块 AMB、URAM、FIFO 或 GT_CHANNEL）/到/在它们之间的逻辑路径布局难度更大，有更高的单元和布线延迟。因此，围绕宏原语添加额外的流水线或减少宏原语路径上的逻辑层次，对提升总体设计性能相当关键。
 
