--- a/UG1292_UltraFast_设计方法时序收敛快捷参考指南/6降低信号网络延迟流程 1.md
+++ b/UG1292_UltraFast_设计方法时序收敛快捷参考指南/6降低信号网络延迟流程 1.md
@@ -70,6 +70,30 @@ report_design_analysis –congestion -name xx
   set_property BLOCK_SYNTH.LUT_COMBINING 0 [get_cells <CellName>]
   ```
 
+  或者使用单元属性MUXF_REMAP 和 CARRY_REMAP 关注拥塞区域内的单元
+
+  ```tcl
+  # opt_design only remaps MUXF cells in inst_a
+  set_property MUXF_REMAP 1 [get_cells inst_a]; 
+  ```
+
+  降低逻辑层次以最大程度减小时序影响，使用 DONT_TOUCH 进行精准优化
+
+  ```tcl
+   # remember which cells have DONT_TOUCH
+  set orig_dont_touch_cells [get_cells -hier -filter DONT_TOUCH] ;
+   # isolate the cells for optimization
+  set DONT_TOUCH 1 <all cells except those to be remapped> ; 
+   # only optimize the isolated cells
+  opt_design -remap ; 
+   # removed DONT_TOUCH from all cells
+  set DONT_TOUCH 0 [get_cells -hier] ; 
+   # restore original DONT_TOUCHed cells
+  set DONT_TOUCH 1 $orig_dont_touch_cells ;
+  ```
+
+  
+
 - 在布线区域内非关键的高扇出网线上引入BUFG
 
   ```tcl
@@ -91,6 +115,8 @@ report_design_analysis –congestion -name xx
   write_xdc -exclude_timing bram_loc.xdc -force
   set_property IS_LOC_FIXED FALSE $brams
   ```
+
+- 
 
 ### 优化高扇出网络
 
