--- a/UG1292_UltraFast_设计方法时序收敛快捷参考指南/8改善时钟偏差流程.md
+++ b/UG1292_UltraFast_设计方法时序收敛快捷参考指南/8改善时钟偏差流程.md
@@ -14,7 +14,11 @@ report_timing
 
 ## 1异步跨时钟域路径是否被安全合理地约束
 
-时钟关系有两种：同步时钟和异步时钟。如果发送时钟和接收时钟是同源的，例如来自于同一个MMCM，则认为二者是同步时钟，否则就按异步时钟处理。对于异步跨时钟域路径，可采用如下三者之一进行约束：
+时钟关系有两种：同步时钟和异步时钟。如果发送时钟和接收时钟是同源的，例如来自于同一个MMCM，则认为二者是同步时钟，否则就按异步时钟处理。
+
+处理异步时钟之间的时序路径，需要确保异步时钟域交汇电路 (report_cdc) 正确
+
+对于异步跨时钟域路径，可采用如下三者之一进行约束：
 
 ```
 set_clock_groups
@@ -30,7 +34,7 @@ set_max_delay -datapath_only
 
 <img src="8改善时钟偏差流程.assets/640.webp" alt="640" style="zoom:50%;" />
 
-同时，还要利用好BUFG_GT和BUFGCE_DIV，两者均可实现简单地分频。如下图所示，利用BUFG_GT实现二分频，从而节省了MMCM。
+同时，还要**利用好BUFG_GT和BUFGCE_DIV**，两者均可实现简单地分频**（7系列不支持）**。如下图所示，利用BUFG_GT实现二分频，从而节省了MMCM。
 
 <img src="8改善时钟偏差流程.assets/640-1616123395154.webp" alt="图片" style="zoom:50%;" />
 
@@ -48,7 +52,7 @@ set_property CLOCK_DELAY_GROUP grp12 [get_nets {clk1_net,clk2_net}]
 
 #### 如何使用
 
-使用 report_clock_interaction 确定关键 CDC 路径（预布线），找出具有最严格设置要求和最高 THS 违规的 4 个时钟。这里我们假设clkout0到clkout1信号
+使用 report_clock_interaction 确定关键 CDC 路径**（预布线）**，找出具有最严格设置要求和最高 THS 违规的 4 个时钟。这里我们假设clkout0到clkout1信号
 
 ![image-20210319161907185](8改善时钟偏差流程.assets/image-20210319161907185.png)
 
@@ -71,8 +75,21 @@ set_property CLOCK_DELAY_GROUP clk0_clk1_grp1 [get_nets [list $clk0 $clk1]]
 
 ## 4时钟是否同时驱动I/O和Slice中的逻辑资源
 
-如果时钟同时驱动I/O和Slice中的逻辑资源，且负载小于2000时，可通过CLOCK_LOW_FANOUT属性对相应的时钟net进行设置，最终可使工具将该时钟驱动的所有负载放置在同一个时钟域内。通过命令report_clock_utilization生成的报告可查看每个时钟的负载，如下图所示。
+如果时钟**同时驱动I/O和Slice中的逻辑资源**，且负载小于2000时，可通过CLOCK_LOW_FANOUT属性对相应的时钟net进行设置，最终可使工具将该时钟驱动的所有负载放置在同一个时钟域内。通过命令`report_clock_utilization`生成的报告可查看每个时钟的负载，如下图所示：
 
-
+![image-20210322111949168](8改善时钟偏差流程.assets/image-20210322111949168.png)
 
 CLOCK_LOW_FANOUT的具体使用方法如下图所示
+
+```tcl
+# 假设clk200m符合条件
+set_property CLOCK_LOW_FANOUT TRUE [get_nets NIS_i/CLK_RST/clk_wiz_0/inst/clk_200m]
+```
+
+## 5检查数据路径是否穿越SLR或I/O Column
+
+如果时钟负载较小且穿越SLR或I/O Column时，可通过Pblock实施位置约束，将负载限定在一定区域内，例如在一个SLR内，以避免穿越一些特殊列，例如I/O Column。
+
+相反地，如果数据路径并未穿越SLR或I/O Column，可尝试对相应的MMCM或PLL做位置约束，使其位于这些负载的中央。
+
+> 参阅 **(UG949)**：《降低 **UltraScale** **和** **UltraScale+** **器件的偏差》。**
