--- a/UG1292_UltraFast_设计方法时序收敛快捷参考指南/UG1292.md
+++ b/UG1292_UltraFast_设计方法时序收敛快捷参考指南/UG1292.md
@@ -7,7 +7,7 @@ Xilinx关于时序收敛的文档常用有三个：
 | **UG1292** | **UltraFast 设计方法时序收敛快捷参考指南**           |
 | **UG906**  | **Vivado Design Suite 用户指南 设计分析与收敛技巧**  |
 
-**UG1292** **可以作为时序收敛的快速参考手册，更系统直观的介绍时序收敛的方法，而**UG949**为更具体的手册用于查找具体信息。
+**UG1292** 可以作为时序收敛的快速参考手册，更系统直观的介绍时序收敛的方法，而**UG949**为更具体的手册用于查找具体信息。
 
 目前三个文档在Xilinx官网均有中文版：https://china.xilinx.com/search/site-keyword-search.html#q=ug949
 
