--- a/UG1292_UltraFast_设计方法时序收敛快捷参考指南/7降低信号网络延迟流程 2.md
+++ b/UG1292_UltraFast_设计方法时序收敛快捷参考指南/7降低信号网络延迟流程 2.md
@@ -54,6 +54,12 @@ report_control_sets -verbose
 
   > 根据架构使用不同阀值 ： 7 系列使用的阈值为 4，UltraScale 和 UltraScale+ 使用的阈值为 2
 
+  利用该选项可以根据设计需求灵活地对某些模块的控制集进行控制。例如：
+
+  ```tcl
+  set_property BLOCK_SYNTH.CONTROL_SET_THRESHOLD{ 16 } [get_cells uart_rx]
+  ```
+
   - 也可采用Block Level Synthesis技术，对指定模块设置该数值；
 
 - 在opt_design阶段：
@@ -68,15 +74,30 @@ report_control_sets -verbose
 
   - 对于低扇出的控制信号（同步使能、同步置位/同步复位），可对其连接的寄存器设置CONTROL_SET_REMAP属性，将控制信号搬移到数据路径上，从而降低控制集。
 
+    出现这种情况，在report_qor_suggestions中会有相应的建议：
+
+  ![image-20210326145127605](7降低信号网络延迟流程 2.assets/image-20210326145127605.png)
+  
+​				找到终端寄存器对其进行属性设置
+  
+  ![image-20210326145051054](7降低信号网络延迟流程 2.assets/image-20210326145051054.png)
+  
+![image-20210326145425323](7降低信号网络延迟流程 2.assets/image-20210326145425323.png)
+  
+  ```tcl
+  set_property CONTROL_SET_REMAP ENABLE [get_cells { {NIS_i/MOTOR_TOP_0/inst/inst_MOTOR/pluse_vertical_rate_cnt_reg[38]}}]
+  ```
+  
   - 或者在在 RTL 中使用 extract_enable 或 extract_reset
-
+  
   <img src="7降低信号网络延迟流程 2.assets/image-20210318164057944.png" alt="image-20210318164057944" style="zoom:67%;" />
+  
   - 在 XDC 文件中：
-
+  
     ```tcl
     set_property extract_enable/reset "no" [get_cells U1/tmp_reg]
     ```
-
+  
     <img src="7降低信号网络延迟流程 2.assets/image-20210318164314834.png" alt="image-20210318164314834" style="zoom:67%;" />
 
 ## 第5步：尝试其他实现策略
